# quotes_generator

./: Cargo.toml  Dockerfile  README.md  dev-env.dockerfile
.github/workflows/: main.yml
setup/: aws_cli_setup.sh  terraform_setup.sh
src/: main.rs  schema.rs
src/models/: mod.rs
src/routes/: all.rs  index.rs  mod.rs  not_found.rs  quote.rs
src/services/: mod.rs
src/sql/: create_quote.sql  list_quotes.sql
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
