[package]
name = "quotes-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quotes_generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5"}
diesel = {version = "2.1.0", features = ["postgres", "r2d2"]}
dotenvy = "0.15"
http-body-util = "0.1.0"
log = "0.4.20"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }